--- a/WeatherApp/build.gradle
+++ b/WeatherApp/build.gradle
@@ -43,6 +43,10 @@ ext{
     rxBindingVersion = '2.0.0'
 
     leakCanaryVersion = '1.5.1'
+
+    constraintLayoutVersion = '1.0.2'
+
+    glideVersion = '4.0.0-RC1'
     dependencies = [
 
             supportAppcompat: "com.android.support:appcompat-v7:$buildToolsVersion",
@@ -83,6 +87,10 @@ ext{
             rxBindingSupportV4: "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxBindingVersion",
 
             leakCanary: "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion",
+            glide:               "com.github.bumptech.glide:glide:$glideVersion",
+            glideCompiler:       "com.github.bumptech.glide:compiler:$glideVersion",
+
+            constraintLayout:   "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
     ]
 
 }
