--- a/WeatherApp/presentation/src/main/AndroidManifest.xml
+++ b/WeatherApp/presentation/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.gmail.runkevich8.app.AndroidApplication"
         android:theme="@style/AppTheme" >
 
         <activity android:name="com.gmail.runkevich8.presentation.screen.MainActivity">
