--- a/WeatherApp/presentation/build.gradle
+++ b/WeatherApp/presentation/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 
     implementation dependency.constraintLayout
 
+    implementation dependency.arrow
+
     implementation project(path: ':data')
     implementation project(path: ':domain')
 
