--- a/WeatherApp/build.gradle
+++ b/WeatherApp/build.gradle
@@ -41,10 +41,11 @@ ext{
     butterKnifeVersion = '8.7.0'
 
     rxBindingVersion = '2.0.0'
-
     leakCanaryVersion = '1.5.1'
-
     constraintLayoutVersion = '1.0.2'
+
+    arrowVersion = '1.0.0'
+    mockitoVersion = '2.+'
 
     glideVersion = '4.0.0-RC1'
     dependencies = [
@@ -90,7 +91,12 @@ ext{
             glide:               "com.github.bumptech.glide:glide:$glideVersion",
             glideCompiler:       "com.github.bumptech.glide:compiler:$glideVersion",
 
-            constraintLayout:   "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
+            constraintLayout:   "com.android.support.constraint:constraint-layout:$constraintLayoutVersion",
+
+            arrow:              "com.fernandocejas:arrow:$arrowVersion",
+
+            mockito:            "org.mockito:mockito-core:$mockitoVersion",
+
     ]
 
 }
